# python-tasks

./: lab1.py  lab2.py  lab4.py  pyproject.toml
lab3/: db.py  lab3.py
